--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.1.1",
     "next": "15.1.2",
     "nookies": "^2.5.2",
     "peerjs": "^1.5.4",
